--- a/beRemote/beRemote/App.xaml
+++ b/beRemote/beRemote/App.xaml
@@ -4,6 +4,21 @@
              xmlns:local="clr-namespace:beRemote"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- Check documentation: https://fluentribbon.github.io/documentation/styles_till_6_1#app -->                
+                <ResourceDictionary Source="pack://application:,,,/Fluent;component/Themes/Generic.xaml" />
+
+                <!-- accent resource -->
+                <!-- Valid Accents: -->
+                <!-- “Red”, “Green”, “Blue”, “Purple”, “Orange”, “Lime”, “Emerald”, “Teal”, “Cyan”, “Cobalt”, “Indigo”, “Violet”, “Pink”, “Magenta”, “Crimson”, “Amber”, “Yellow”, “Brown”, “Olive”, “Steel”, “Mauve”, “Taupe”, “Sienna” -->
+
+                <ResourceDictionary Source="pack://application:,,,/Fluent;component/Themes/Accents/Cobalt.xaml" />
+
+                <!-- theme resource -->
+                <!-- Valid Themes: “BaseLight”, “BaseDark” -->
+                <ResourceDictionary Source="pack://application:,,,/Fluent;component/Themes/Colors/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
